--- a/Unity/Champloo/Champloo.CSharp.csproj
+++ b/Unity/Champloo/Champloo.CSharp.csproj
@@ -78,7 +78,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\GamePadInput\Demo\DemoScript.cs" />
+    <Compile Include="Assets\GamePadInput\GamePad.cs" />
     <Compile Include="Assets\Scripts\Controller2D.cs" />
+    <Compile Include="Assets\Scripts\InputController.cs" />
+    <Compile Include="Assets\Scripts\Movement States\InAir.cs" />
+    <Compile Include="Assets\Scripts\Movement States\MovementState.cs" />
+    <Compile Include="Assets\Scripts\Movement States\OnDash.cs" />
+    <Compile Include="Assets\Scripts\Movement States\OnGround.cs" />
+    <Compile Include="Assets\Scripts\Movement States\OnWall.cs" />
     <Compile Include="Assets\Scripts\PathPlatformController.cs" />
     <Compile Include="Assets\Scripts\PlatformController.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
