--- a/Unity/Champloo/Champloo.CSharp.Plugins.csproj
+++ b/Unity/Champloo/Champloo.CSharp.Plugins.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Assets\Standard Assets\Utility\TimedObjectDestructor.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Resources\Video_Game_Names.txt" />
     <None Include="Assets\Shaders\Splatter.shader" />
     <None Include="Assets\Shaders\Surface.shader" />
   </ItemGroup>
