--- a/Unity/Champloo/Champloo.CSharp.csproj
+++ b/Unity/Champloo/Champloo.CSharp.csproj
@@ -80,6 +80,9 @@
     <Compile Include="Assets\Scripts\Controllers\PathPlatformController.cs" />
     <Compile Include="Assets\Scripts\Controllers\PlatformController.cs" />
     <Compile Include="Assets\Scripts\Controllers\RaycastController.cs" />
+    <Compile Include="Assets\Scripts\Game State\Match.cs" />
+    <Compile Include="Assets\Scripts\Game State\Score.cs" />
+    <Compile Include="Assets\Scripts\Game State\Timer.cs" />
     <Compile Include="Assets\Scripts\Player\Movement States\InAir.cs" />
     <Compile Include="Assets\Scripts\Player\Movement States\InAttack.cs" />
     <Compile Include="Assets\Scripts\Player\Movement States\MovementState.cs" />
@@ -101,10 +104,9 @@
     <Compile Include="Assets\Scripts\UI\MenuManager.cs" />
     <Compile Include="Assets\Scripts\UI\PlayerScoreCard.cs" />
     <Compile Include="Assets\Scripts\UI\Scene.cs" />
-    <Compile Include="Assets\Scripts\UI\Score.cs" />
     <Compile Include="Assets\Scripts\UI\ScoreCardInstantiator.cs" />
-    <Compile Include="Assets\Scripts\UI\Timer.cs" />
     <Compile Include="Assets\Scripts\UI\TitleGenerator.cs" />
+    <Compile Include="Assets\Scripts\Utility\Interpolate.cs" />
     <Compile Include="Assets\Scripts\Weapons\Sword.cs" />
     <Compile Include="Assets\Scripts\Weapons\Weapon.cs" />
   </ItemGroup>
