Block started, and Player Names display

--- a/Unity/Champloo/Champloo.CSharp.csproj
+++ b/Unity/Champloo/Champloo.CSharp.csproj
@@ -61,6 +61,9 @@
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
+    <Reference Include="Mono.Cecil">
+      <HintPath>Library\UnityAssemblies\Mono.Cecil.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Champloo.CSharp.Plugins.csproj">
@@ -86,6 +89,7 @@
     <Compile Include="Assets\Scripts\Game State\Timer.cs" />
     <Compile Include="Assets\Scripts\Player\Movement States\InAir.cs" />
     <Compile Include="Assets\Scripts\Player\Movement States\InAttack.cs" />
+    <Compile Include="Assets\Scripts\Player\Movement States\InBlock.cs" />
     <Compile Include="Assets\Scripts\Player\Movement States\MovementState.cs" />
     <Compile Include="Assets\Scripts\Player\Movement States\OnDash.cs" />
     <Compile Include="Assets\Scripts\Player\Movement States\OnGround.cs" />
