--- a/Unity/Champloo/Champloo.CSharp.csproj
+++ b/Unity/Champloo/Champloo.CSharp.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Assets\Scripts\UI\TitleGenerator.cs" />
     <Compile Include="Assets\Scripts\UI\UpdatePlayerNumber.cs" />
     <Compile Include="Assets\Scripts\Utility\Interpolate.cs" />
+    <Compile Include="Assets\Scripts\Weapons\Shield.cs" />
     <Compile Include="Assets\Scripts\Weapons\Sword.cs" />
     <Compile Include="Assets\Scripts\Weapons\Weapon.cs" />
   </ItemGroup>
