--- a/Unity/Champloo/Champloo.CSharp.csproj
+++ b/Unity/Champloo/Champloo.CSharp.csproj
@@ -61,6 +61,12 @@
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEditor.iOS.Extensions.Xcode">
+      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.iOS.Extensions.Common">
+      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Common.dll</HintPath>
+    </Reference>
     <Reference Include="NATTraversalForUNET">
       <HintPath>Assets\Plugins\NAT Traversal for UNET\NATTraversalForUNET.dll</HintPath>
     </Reference>
@@ -197,6 +203,8 @@
     <Compile Include="Assets\Scripts\UI\Lobby\LobbyCodeHookTEST.cs" />
     <Compile Include="Assets\Scripts\UI\Lobby\LobbyFlowManager.cs" />
     <Compile Include="Assets\Scripts\UI\Lobby\LobbyManagementHooks.cs" />
+    <Compile Include="Assets\Scripts\UI\Map Select\MapOption.cs" />
+    <Compile Include="Assets\Scripts\UI\Map Select\MapSelect.cs" />
     <Compile Include="Assets\Scripts\UI\NetworkLobbyHook.cs" />
     <Compile Include="Assets\Scripts\UI\Networking\DisplayExternalIP.cs" />
     <Compile Include="Assets\Scripts\UI\Networking\GetExternalIP.cs" />
