--- a/Unity/Champloo/Champloo.CSharp.csproj
+++ b/Unity/Champloo/Champloo.CSharp.csproj
@@ -93,6 +93,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\ClassTypeReference\ClassTypeConstraintAttribute.cs" />
+    <Compile Include="Assets\ClassTypeReference\ClassTypeReference.cs" />
     <Compile Include="Assets\EZ Camera Shake\Scripts\CameraShakeInstance.cs" />
     <Compile Include="Assets\EZ Camera Shake\Scripts\CameraShakePresets.cs" />
     <Compile Include="Assets\EZ Camera Shake\Scripts\CameraShaker.cs" />
@@ -161,8 +163,6 @@
     <Compile Include="Assets\Rewired\Internal\Scripts\InputManager.cs" />
     <Compile Include="Assets\Rewired\Internal\Scripts\Misc\ExternalTools.cs" />
     <Compile Include="Assets\Rewired\Internal\Scripts\Platforms\Ouya\OuyaInputSource.cs" />
-    <Compile Include="Assets\Scripts\Blood\BloodSplat.cs" />
-    <Compile Include="Assets\Scripts\Blood\SplatRenderer.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraTarget.cs" />
     <Compile Include="Assets\Scripts\Camera\SmashCamera.cs" />
     <Compile Include="Assets\Scripts\Controllers\CollisionChecker.cs" />
@@ -172,6 +172,9 @@
     <Compile Include="Assets\Scripts\Controllers\PlatformController.cs" />
     <Compile Include="Assets\Scripts\Controllers\RaycastController.cs" />
     <Compile Include="Assets\Scripts\DontDestroyOnLoad.cs" />
+    <Compile Include="Assets\Scripts\Effects\Blood\BloodSplat.cs" />
+    <Compile Include="Assets\Scripts\Effects\Blood\SplatRenderer.cs" />
+    <Compile Include="Assets\Scripts\Effects\Foot Dust\MovementStateFootDust.cs" />
     <Compile Include="Assets\Scripts\Game State\Match.cs" />
     <Compile Include="Assets\Scripts\Game State\PlayerSettings.cs" />
     <Compile Include="Assets\Scripts\Game State\Score.cs" />
